--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   "homepage": "https://github.com/VapiAI/web#readme",
   "dependencies": {
     "@daily-co/daily-js": "^0.75.2",
-    "events": "^3.3.0"
+    "events": "^3.3.0",
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/node": "^20.6.0",
+    "browserify": "^17.0.1",
     "jest": "^29.7.0",
     "openai": "^4.24.1",
     "swagger-typescript-api": "^13.0.3",
