--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,19 @@ services:
       - config-data:/app/config-data
     command: >
       sh -c "apk add --no-cache git &&
-             git clone https://github.com/mattywhitenz/vapiweb.git /app &&
+             if [ -d /app/.git ]; then
+               echo 'Repository exists, updating...' &&
+               cd /app &&
+               git pull
+             else
+               echo 'First run, cloning repository...' &&
+               rm -rf /app/* /app/.* 2>/dev/null || true &&
+               git clone https://github.com/mattywhitenz/vapiweb.git /app
+             fi &&
              cd /app &&
              npm install &&
              mkdir -p /app/config-data &&
-             ln -sf /app/config-data/config.json /app/config.json &&
+             ln -sf /app/config-data/config.json /app/config.json || true &&
              node server.js"
     restart: unless-stopped
 
