--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,22 +8,28 @@ services:
     environment:
       - PORT=8998
     volumes:
-      - config-data:/app/config-data
+      - config-data:/data
+    working_dir: /app
     command: >
       sh -c "apk add --no-cache git &&
+             mkdir -p /data &&
              if [ -d /app/.git ]; then
                echo 'Repository exists, updating...' &&
-               cd /app &&
-               git pull
+               git pull || echo 'Failed to pull, continuing with existing code'
              else
-               echo 'First run, cloning repository...' &&
-               rm -rf /app/* /app/.* 2>/dev/null || true &&
-               git clone https://github.com/mattywhitenz/vapiweb.git /app
+               echo 'First run, preparing directory...' &&
+               cd / &&
+               rm -rf /app &&
+               mkdir -p /app &&
+               echo 'Cloning repository...' &&
+               git clone https://github.com/mattywhitenz/vapiweb.git /app &&
+               cd /app
              fi &&
-             cd /app &&
+             echo 'Installing dependencies...' &&
              npm install &&
-             mkdir -p /app/config-data &&
-             ln -sf /app/config-data/config.json /app/config.json || true &&
+             echo 'Setting up config file...' &&
+             ln -sf /data/config.json /app/config.json || true &&
+             echo 'Starting server...' &&
              node server.js"
     restart: unless-stopped
 
